Table users {
  user_id integer [primary key]
  name varchar
  email varchar [unique]
  password_hash varchar
  phone varchar
  gender int [default: 0]
  dob date
  role varchar [default: "customer"]
  is_active boolean [default: true]
  last_login datetime
  created_at datetime [default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table categories {
  category_id integer [primary key]
  name varchar
  slug varchar [unique]
  description text
  parent_id integer
  is_active boolean [default: true]
}

Table products {
  product_id integer [primary key]
  category_id integer
  name varchar
  slug varchar [unique]
  description text
  base_price numeric(15,2)
  thumbnail varchar
  is_new boolean [default: false]
  discount_percent integer [default: 0]
  badge varchar
  images json
  is_published boolean [default: true]
  created_at datetime [default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table product_variants {
  variant_id integer [primary key]
  product_id integer
  sku varchar [unique]
  attributes json
  price numeric(15,2)
  stock integer [default: 0]
  images json
  is_active boolean [default: true]
}

Table provinces {
  province_id integer [primary key]
  code varchar [unique]
  name varchar
}

Table wards {
  ward_id integer [primary key]
  province_id integer
  code varchar [unique]
  name varchar
}

Table user_addresses {
  address_id integer [primary key]
  user_id integer
  province_id integer
  ward_id integer
  street varchar
  full_address varchar
  is_default boolean [default: false]
  created_at datetime [default: `now()`]
}

Table discounts {
  discount_id integer [primary key]
  code varchar [unique]
  type varchar
  value numeric(15,2)
  max_discount_amount numeric(15,2)
  min_order_value numeric(15,2)
  start_date datetime
  end_date datetime
  usage_limit integer
  used_count integer [default: 0]
  is_active boolean [default: true]
}

Table reviews {
  review_id integer [primary key]
  user_id integer
  product_id integer
  order_item_id integer [unique]
  rating integer
  title varchar
  comment text
  images json
  helpful_count integer [default: 0]
  size_purchased varchar
  created_at datetime [default: `now()`]
  is_approved boolean [default: true]
}

Table carts {
  cart_id integer [primary key]
  user_id integer
  updated_at datetime
}

Table cart_items {
  cart_item_id integer [primary key]
  cart_id integer
  product_variant_id integer
  quantity integer [default: 1]
  created_at datetime [default: `now()`]
}

Table orders {
  order_id integer [primary key]
  code varchar [unique]
  user_id integer
  discount_id integer
  recipient_name varchar
  recipient_phone varchar
  shipping_address_full varchar
  shipping_province varchar
  shipping_ward varchar
  subtotal numeric(15,2)
  discount_amount numeric(15,2)
  total_price numeric(15,2)
  payment_method varchar
  payment_status varchar [default: "unpaid"]
  transaction_id varchar
  status varchar [default: "pending"]
  note text
  created_at datetime [default: `now()`]
  updated_at datetime
}

Table order_items {
  order_item_id integer [primary key]
  order_id integer
  product_variant_id integer
  product_name varchar
  variant_attributes_snapshot json
  quantity integer
  unit_price numeric(15,2)
  total_price numeric(15,2)
}

// Relationships

Ref: categories.parent_id > categories.category_id

Ref: products.category_id > categories.category_id

Ref: product_variants.product_id > products.product_id

Ref: wards.province_id > provinces.province_id

Ref: user_addresses.user_id > users.user_id
Ref: user_addresses.province_id > provinces.province_id
Ref: user_addresses.ward_id > wards.ward_id

Ref: reviews.user_id > users.user_id
Ref: reviews.product_id > products.product_id
Ref: reviews.order_item_id - order_items.order_item_id

Ref: carts.user_id - users.user_id

Ref: cart_items.cart_id > carts.cart_id
Ref: cart_items.product_variant_id > product_variants.variant_id

Ref: orders.user_id > users.user_id
Ref: orders.discount_id > discounts.discount_id

Ref: order_items.order_id > orders.order_id
Ref: order_items.product_variant_id > product_variants.variant_id
